# Agentic-AI

./: .boilerplate_code.py  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
openai-agents-sdk/: OpenAI_agents_SDK_Hello_world.ipynb  README.md  agents.py  notes.txt
openai-agents-sdk/chainlit/chainlit_project/: .env  agents.py  format_code.py  main.py  pyproject.toml
openai-agents-sdk/chainlit/hello_chainlit/: chainlit.md  pyproject.toml
openai-agents-sdk/geminii/: .env  README.md  notes.txt  pyproject.toml
openai-agents-sdk/geminii/src/gemini/: __init__.py  gimini.py
openai-agents-sdk/uv/: README.md
openai-agents-sdk/uv/packaged-app/: pyproject.toml
openai-agents-sdk/uv/packaged-app/src/packaged-app/: __init__.py
openai-agents-sdk/uv/simple-app/: pyproject.toml
openai-agents-sdk/uv/simple-app/src/simple_app/: main.py
openai-agents-sdk/uv/test/: pyproject.toml
