[project]
name = "gemini"
version = "0.1.0"
description = "CLI agent to run Google Gemini via the OpenAI-compatible OpenAI Agents SDK."
readme = "README.md"
authors = [
    { name = "safwaahmad", email = "sahmedsaffi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.2.8",
]

[project.scripts]
gemini = "gemini:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
