[project]
name = "hello-chainlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "safwaahmad", email = "sahmedsaffi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "agents>=1.4.0",
    "chainlit>=2.7.1.1",
]

[project.scripts]
hello-chainlit = "hello_chainlit:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
