[project]
name = "simple-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "safwaahmad", email = "sahmedsaffi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
simple-app = "simple_app:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
